--- a/httpdns_ios_demo/httpdns_ios_demo/Base.lproj/Main.storyboard
+++ b/httpdns_ios_demo/httpdns_ios_demo/Base.lproj/Main.storyboard
@@ -860,10 +860,9 @@
         <!--设置-->
         <scene sceneID="4fj-9q-xXf">
             <objects>
-                <navigationController id="2eN-Fs-Jzx" sceneMemberID="viewController">
+                <navigationController navigationBarHidden="YES" id="2eN-Fs-Jzx" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="设置" image="Tabbar_Setting" id="8ZY-XI-UK7"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="FV0-Yu-MPA">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -874,21 +873,71 @@
             </objects>
             <point key="canvasLocation" x="1981" y="1261"/>
         </scene>
-        <!--View Controller-->
+        <!--Setting View Controller-->
         <scene sceneID="3Ui-Sj-6SM">
             <objects>
-                <viewController id="o0X-ao-CZa" sceneMemberID="viewController">
+                <viewController id="o0X-ao-CZa" customClass="SettingViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EXv-cE-WTd">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="n4u-yp-qSe">
+                                <rect key="frame" x="17" y="129.33333333333331" width="359" height="639.66666666666674"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <sections/>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ANG-tm-fVK">
+                                <rect key="frame" x="17" y="59" width="359" height="50.333333333333343"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tips_Blue" translatesAutoresizingMaskIntoConstraints="NO" id="FUI-Fb-5DS">
+                                        <rect key="frame" x="12" y="15.666666666666671" width="19" height="19"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="FUI-Fb-5DS" secondAttribute="height" multiplier="18:18" id="eiY-G1-06P"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="通用配置修改后，需重启App生效" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xnx-rj-ksz">
+                                        <rect key="frame" x="43" y="16.666666666666671" width="216" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="0.12156862745098039" green="0.12549019607843137" blue="0.14117647058823529" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.94901960784313721" green="0.95294117647058818" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="FUI-Fb-5DS" firstAttribute="height" secondItem="ANG-tm-fVK" secondAttribute="height" multiplier="18:48" id="20B-KW-4V9"/>
+                                    <constraint firstItem="Xnx-rj-ksz" firstAttribute="leading" secondItem="FUI-Fb-5DS" secondAttribute="trailing" constant="12" id="A3l-Tw-TQD"/>
+                                    <constraint firstItem="Xnx-rj-ksz" firstAttribute="centerY" secondItem="FUI-Fb-5DS" secondAttribute="centerY" id="CLa-PK-4NB"/>
+                                    <constraint firstItem="FUI-Fb-5DS" firstAttribute="leading" secondItem="ANG-tm-fVK" secondAttribute="leading" constant="12" id="Qqc-ch-qae"/>
+                                    <constraint firstAttribute="width" secondItem="ANG-tm-fVK" secondAttribute="height" multiplier="342:48" id="bvz-Zo-sYp"/>
+                                    <constraint firstItem="FUI-Fb-5DS" firstAttribute="centerY" secondItem="ANG-tm-fVK" secondAttribute="centerY" id="qSy-zx-F8b"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Ye-0Q-xjv"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Ye-0Q-xjv" firstAttribute="trailing" secondItem="ANG-tm-fVK" secondAttribute="trailing" constant="17" id="07B-F5-u4g"/>
+                            <constraint firstItem="6Ye-0Q-xjv" firstAttribute="bottom" secondItem="n4u-yp-qSe" secondAttribute="bottom" id="6W2-p7-GTl"/>
+                            <constraint firstItem="ANG-tm-fVK" firstAttribute="leading" secondItem="6Ye-0Q-xjv" secondAttribute="leading" constant="17" id="9Jc-nm-4vG"/>
+                            <constraint firstItem="n4u-yp-qSe" firstAttribute="trailing" secondItem="ANG-tm-fVK" secondAttribute="trailing" id="Ils-6X-jgw"/>
+                            <constraint firstItem="n4u-yp-qSe" firstAttribute="top" secondItem="ANG-tm-fVK" secondAttribute="bottom" constant="20" id="Mzg-Mp-wlo"/>
+                            <constraint firstItem="n4u-yp-qSe" firstAttribute="leading" secondItem="ANG-tm-fVK" secondAttribute="leading" id="hp4-vh-fU7"/>
+                            <constraint firstItem="ANG-tm-fVK" firstAttribute="top" secondItem="6Ye-0Q-xjv" secondAttribute="top" id="sIH-ot-ICT"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="7xy-Yf-bKE"/>
+                    <connections>
+                        <outlet property="settingTableView" destination="n4u-yp-qSe" id="rhf-bs-j9Y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hmZ-FS-ooN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2844" y="1261"/>
+            <point key="canvasLocation" x="2843.5114503816794" y="1259.8591549295775"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Pik-pu-IKn">
@@ -920,6 +969,7 @@
         <image name="Tabbar_Example" width="24" height="24"/>
         <image name="Tabbar_Function" width="24" height="24"/>
         <image name="Tabbar_Setting" width="24" height="24"/>
+        <image name="Tips_Blue" width="18" height="18"/>
         <image name="search" width="24.004730224609375" height="24"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
