--- a/httpdns_ios_demo/httpdns_ios_demo/Base.lproj/Main.storyboard
+++ b/httpdns_ios_demo/httpdns_ios_demo/Base.lproj/Main.storyboard
@@ -996,6 +996,57 @@
             </objects>
             <point key="canvasLocation" x="3785" y="1260"/>
         </scene>
+        <!--About Us View Controller-->
+        <scene sceneID="KR8-6q-wtg">
+            <objects>
+                <viewController storyboardIdentifier="AboutUsViewController" hidesBottomBarWhenPushed="YES" id="UYK-4O-ViJ" customClass="AboutUsViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GVe-xP-bqi">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HelloFuction_Banner" translatesAutoresizingMaskIntoConstraints="NO" id="yjV-h5-baZ">
+                                <rect key="frame" x="39.666666666666657" y="172" width="313.66666666666674" height="314"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="yjV-h5-baZ" secondAttribute="height" id="Tmp-jf-TV9"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="【阿里云HTTPDNS】 Demo程序" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fdM-d1-bzK">
+                                <rect key="frame" x="83.333333333333329" y="496" width="226.66666666666669" height="19.333333333333371"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                <color key="textColor" red="0.37254901960784315" green="0.43137254901960786" blue="0.52941176470588236" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ki7-8N-oBV">
+                                <rect key="frame" x="0.0" y="722" width="393" height="96"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="96" id="lRe-IA-Yzo"/>
+                                </constraints>
+                                <string key="text"> 阿里云（软件）有限公司版权所有
+Copyright @ 2009一2017 AIiyun.com 
+AII Rights Reserved.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.59607843137254901" green="0.64313725490196072" blue="0.72941176470588232" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="gIp-a3-wFQ"/>
+                        <color key="backgroundColor" red="0.94901960784313721" green="0.95294117647058818" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="gIp-a3-wFQ" firstAttribute="bottom" secondItem="Ki7-8N-oBV" secondAttribute="bottom" id="7mL-ps-FDV"/>
+                            <constraint firstItem="yjV-h5-baZ" firstAttribute="centerY" secondItem="gIp-a3-wFQ" secondAttribute="centerY" multiplier="0.75" id="VSY-Hc-T1c"/>
+                            <constraint firstItem="yjV-h5-baZ" firstAttribute="centerX" secondItem="gIp-a3-wFQ" secondAttribute="centerX" id="ZyO-2O-Vq3"/>
+                            <constraint firstItem="yjV-h5-baZ" firstAttribute="width" secondItem="GVe-xP-bqi" secondAttribute="width" multiplier="306:383" id="aOZ-U4-ZLi"/>
+                            <constraint firstItem="gIp-a3-wFQ" firstAttribute="trailing" secondItem="Ki7-8N-oBV" secondAttribute="trailing" id="c2N-OS-Dca"/>
+                            <constraint firstItem="fdM-d1-bzK" firstAttribute="top" secondItem="yjV-h5-baZ" secondAttribute="bottom" constant="10" id="cbg-cG-atZ"/>
+                            <constraint firstItem="Ki7-8N-oBV" firstAttribute="leading" secondItem="gIp-a3-wFQ" secondAttribute="leading" id="lHt-yf-S2R"/>
+                            <constraint firstItem="fdM-d1-bzK" firstAttribute="centerX" secondItem="gIp-a3-wFQ" secondAttribute="centerX" id="o3Z-lY-5d1"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z1U-uO-f6Q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5007" y="1263"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Pik-pu-IKn">
             <objects>
